<resources>
    <string name="app_name">First Application</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="base">Base</string>
    <string name="number_of_members">Number of members</string>
    <string name="per_person_share">(Per person Share)</string>
    <string name="split_bill">Split Bill</string>
</resources>